upload attachments
