# src/main/java/dev/itrust/assistantservice/controller/CaseController.java
@@ -1,5 +1,6 @@
 package dev.itrust.assistantservice.controller;
 
+import dev.itrust.assistantservice.hack4law_assistant_service.api.CaseAttachmentsApi;
 import dev.itrust.assistantservice.hack4law_assistant_service.api.CreateCaseApi;
 import dev.itrust.assistantservice.hack4law_assistant_service.api.QueryCaseApi;
 import dev.itrust.assistantservice.hack4law_assistant_service.model.CaseDefinitionDto;
@@ -7,6 +8,8 @@ import dev.itrust.assistantservice.hack4law_assistant_service.model.CaseDto;
 import dev.itrust.assistantservice.hack4law_assistant_service.model.CaseResponseDto;
 import dev.itrust.assistantservice.service.CaseService;
 import lombok.RequiredArgsConstructor;
+import lombok.SneakyThrows;
+import org.springframework.core.io.Resource;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -14,7 +17,7 @@ import java.util.List;
 
 @RestController
 @RequiredArgsConstructor
-public class CaseController implements QueryCaseApi, CreateCaseApi {
+public class CaseController implements QueryCaseApi, CreateCaseApi, CaseAttachmentsApi {
 
     private final CaseService caseService;
 
@@ -48,4 +51,10 @@ public class CaseController implements QueryCaseApi, CreateCaseApi {
         return ResponseEntity.ok(caseService.updateCaseById(caseId, caseDto));
     }
 
+    @SneakyThrows
+    @Override
+    public ResponseEntity<Void> uploadNewAttachment(Integer caseId, String fileType, String fileDescription, String fileLink, String fileData) {
+        caseService.uploadAttachment(caseId, fileData, fileType, fileDescription, fileLink);
+        return ResponseEntity.ok().build();
+    }
 }
